fixed bug causing images to be appended on each toggle and sidebar was too wide

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -107,7 +107,7 @@ body {
   top: 0;
   left: 0;
   height: 100%;
-  width: 10%;
+  width: 5%;
 }
 
 #sidebar {
